[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ReflexBasedControlSystem"
version = "0.1.0"
description = "Hardware Implementation of Reflex-Based Control System for Hexapod Robot"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Andrew" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dill==0.4.1",
    "filterpy==1.4.5",
    "fonttools==4.63.0",
    "kiwisolver==1.5.0",
    "matplotlib==3.11.0",
    "narwhals==2.22.1",
    "numpy==2.5.0",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "plotly==6.8.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "scipy==1.18.0",
    "six==1.17.0",
    "tzdata==2026.2",
]

[tool.setuptools]
# Prevents setuptools from aggressively scanning your subfolders
# and trying to package them as external libraries.
py-modules = ["main"]